--- a/site/src/views/products/create.ejs
+++ b/site/src/views/products/create.ejs
@@ -10,7 +10,7 @@
             <form action="/products/create" method="POST" enctype="multipart/form-data">
                 <div>
                     <label for="name">Nombre del producto:</label>
-                    <input type="text" id="name" name="name" placeholder="Eg. GTX 3090" value="<%= locals.old && old.name %>"> 
+                    <input type="text" id="name" name="name" placeholder="Eg. GTX 3090" value="<% if (locals.old && old.name) { %><%= old.name %><% } %>"> 
                     <% if (locals.errors && errors.name) { %>
                         <p class="feedback"><%= errors.name.msg %> </p>
                     <% } %>
@@ -23,16 +23,12 @@
                     <% } %>
                 </div>
                 <div>
-                    <label for="category">Categoria:</label>
-                    <select name="categorie_id" id="category">
-                        <option value="NaN" selected disabled>--Selecciona--</option>
-                        <% for (let i of categories) { %>
-                            <option value="<%= i.id %>" <% if (locals.errors && old.categorie_id == i.id) { %><%= ' selected' %><% } %> > <%= i.name %> </option>
-                        <% } %>  
-                    </select>
-                    <% if (locals.errors && errors.categorie_id) { %>
-                        <p class="feedback"><%= errors.categorie_id.msg %> </p>
-                    <% } %>
+                    <label>Categorias:</label>
+                    <% for (let i of categories) { %>
+                        <label for="<%= i.name %>"><%= i.name %></label>
+                        <input type="checkbox" name="categories_ids" value="<%= i.id %>" id="<%= i.name %>">
+                        <br/>
+                    <% } %>  
                 </div>
                 <div>
                     <label for="brand">Selecciona la marca:</label>
@@ -48,7 +44,7 @@
                 </div>
                 <div>
                     <label for="price">Precio:</label>
-                    <input type="number" id="price" name="price" min="0" placeholder="1800.5" step="any" value="<%= locals.old && old.price %>" >
+                    <input type="number" id="price" name="price" min="0" placeholder="1800.5" step="any" value="<% if (locals.old && old.price) {%><%= olf.price %><% } %>">
                     <% if (locals.errors && errors.price) { %>
                         <p class="feedback"><%= errors.price.msg %> </p>
                     <% } %>
