--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -23,6 +23,10 @@
                     <% } %>
                 </div>
                 <div>
+                    <input type="checkbox" name="rememberMe" id="rememberMe">
+                    <label for="rememberMe">Rememeber me</label>
+                </div>
+                <div>
                     <button type="submit">Enviar</button>
                 </div>
             </form>
