--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -29,6 +29,9 @@
                 <div>
                     <button type="submit">Enviar</button>
                 </div>
+                <div>
+                    <a href="/users/register">Registrate!</a>
+                </div>
             </form>
         </main>
     </div>
