--- a/site/src/views/users/create.ejs
+++ b/site/src/views/users/create.ejs
@@ -6,30 +6,34 @@
     <div class="container">
         <main class="registerForm">
             <h1>Formulario de registro</h1>
-            <form action="/users/" method="POST">
+            <form action="/users/register" method="POST" enctype="multipart/form-data">
                 <div>
                     <label for="first_name">Nombre:</label>
-                    <input type="text" id="first_name" name="first_name" placeholder="Ej. Jose de jesus">
+                    <input type="text" id="first_name" name="first_name" placeholder="Ej. Jose de jesus" value="<% if (locals.old && old.first_name) { %><%= old.first_name %><% } %>">
+                    <% if (locals.errors && errors.first_name) { %>
+                        <p class="feedback"><%= errors.first_name.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
-                    <label for="second_name">Apellido:</label>
-                    <input type="text" id="second_name" name="second_name" placeholder="Ej. Aguirre Arzate">
+                    <label for="last_name">Apellido:</label>
+                    <input type="text" id="last_name" name="last_name" placeholder="Ej. Aguirre Arzate" value="<% if (locals.old && old.last_name) { %><%= old.last_name %><% } %>">
+                    <% if (locals.errors && errors.last_name) { %>
+                        <p class="feedback"><%= errors.last_name.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
                     <label for="email">Correo electronico:</label>
-                    <input type="email" id="email" name="email" placeholder="Ej. jaguirre@email.com">
+                    <input type="email" id="email" name="email" placeholder="Ej. jaguirre@email.com" value="<% if (locals.old && old.email) { %><%= old.email %><% } %>">
+                    <% if (locals.errors && errors.email) { %>
+                        <p class="feedback"><%= errors.email.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
                     <label for="password">Contrasena:</label>
                     <input type="password" name="password" id="password">
-                </div>
-                <div>
-                    <label for="category">Categoria:</label>
-                    <select name="category" id="category">
-                        <option value="NaN" selected disabled>--Selecciona--</option>
-                        <option value="0">admin</option>
-                        <option value="1">user</option>
-                    </select>
+                    <% if (locals.errors && errors.password) { %>
+                        <p class="feedback"><%= errors.password.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
                     <label for="image">Avatar:</label>
