--- a/site/src/views/users/delete.ejs
+++ b/site/src/views/users/delete.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head', { title: `Deseas eliminar al usuario: ` }) %>
+    <%- include('../partials/head', { title: `Eliminar usuario` }) %>
 <body>
     <%- include('../partials/header') %>
 
     <div class="container">
         <main>
-            <h2>Desea eliminar al usuario: </h2>
-            <form action="/users/<%= product.id %>/delete?_method=DELETE" method="POST">
+            <h2>Desea eliminar al usuario asociado a: <%= user.email %></h2>
+            <form action="/users/<%= user.id %>/delete?_method=DELETE" method="POST">
                 <button type="submit">Eliminar</button>
             </form>
         </main>
