--- a/site/src/views/users/detail.ejs
+++ b/site/src/views/users/detail.ejs
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head', {title: "Detalle de usuario"}) %>
+    <%- include('../partials/head', {title: `Detalle del usuario: ${user.email}`}) %>
 <body>
     <%- include('../partials/header') %>
 
     <div class="container">
         <main>
-        <h1>Detalle de usuario: usuario.name</h1>
-            <p>Imagen del usuario: </p>
-            <p>Nombre del usuario: </p>
-            <p>Apellido del usuario: </p>
-            <p>Correo electronico del usuario: </p>
-            <p>Categoria del usuario: </p>
-            <a href="/users/edit/user.id">Editar</a>
-            <form action="/users/user.id?_method=DELETE" method="POST">
-                <button type="submit">Eliminar</button>
-            </form>
+            <h1>Detalle de usuario: <%= `${user.first_name} ${user.last_name}` %> </h1>
+            <div>
+                <p>Imagen de perfil: </p>
+                <img src="/images/min/users/<%= user.image %>" alt="user avatar">
+            </div>
+            <div>
+                <p>Nombre del usuario: <%= user.first_name %> </p>
+            </div>
+            <div>
+                <p>Apellido del usuario: <%= user.last_name %> </p>
+            </div>
+            <div>
+                <p>Correo electronico del usuario: <%= user.email %> </p>
+            </div>
+            <div>
+                <p>Categoria del usuario: <%= user.role.title %> </p>
+            </div>
+            <div>
+                <a href="/users/<%= user.id %>/edit">Editar</a>
+            </div>
+            <button>
+                <a href="/users/<%= user.id %>/delete">
+                    Borrar
+                </a>
+            </button>
         </main>
     </div>
 
