--- a/site/src/views/users/edit.ejs
+++ b/site/src/views/users/edit.ejs
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head', {title: "Edita tu usuario"}) %>
+    <%- include( '../partials/head', {title: `Edita la informacion del usuario: ${user.email}` } ) %>
 <body>
     <%- include('../partials/header') %>
 
     <div class="container">
         <main>
-        <h1>Formulario para la edicion del usuario: usuario.name</h1>
-            <form action="/users/user.id?_method=PUT" method="POST">
+            <h1>Formulario para la edicion del usuario: <%= `${user.first_name} ${user.last_name}` %></h1>
+            <form action="/users/<%= user.id %>/edit?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div>
                     <label for="first_name">Nombre:</label>
-                    <input type="text" id="first_name" name="first_name" placeholder="Ej. Jose de jesus">
+                    <input type="text" id="first_name" name="first_name" placeholder="Ej. Jose de jesus" value="<% if ( locals.errors && errors.first_name) { %><%= old.first_name %><% } else { %><%= user.first_name %><% } %>">
+                    <% if (locals.errors && errors.first_name) { %>
+                        <p class="feedback"><%= errors.first_name.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
-                    <label for="second_name">Apellido:</label>
-                    <input type="text" id="second_name" name="second_name" placeholder="Ej. Aguirre Arzate">
+                    <label for="last_name">Apellido:</label>
+                    <input type="text" id="last_name" name="last_name" placeholder="Ej. Aguirre Arzate" value="<% if ( locals.errors && errors.last_name) { %> <%= old.last_name %> <% } else { %><%= user.last_name %><% } %>">
+                    <% if (locals.errors && errors.last_name) { %>
+                        <p class="feedback"><%= errors.last_name.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
                     <label for="email">Correo electronico:</label>
-                    <input type="email" id="email" name="email" placeholder="Ej. jaguirre@email.com">
+                    <input type="email" id="email" name="email" placeholder="Ej. jaguirre@email.com" value="<% if ( locals.errors && errors.email) { %> <%= old.email %> <% } else { %><%= user.email %><% } %>">
+                    <% if (locals.errors && errors.email) { %>
+                        <p class="feedback"><%= errors.email.msg %> </p>
+                    <% } %>
                 </div>
                 <div>
                     <label for="password">Contrasena:</label>
                     <input type="password" name="password" id="password">
+                    <% if (locals.errors && errors.password) { %>
+                        <p class="feedback"><%= errors.password.msg %> </p>
+                    <% } %>
                 </div>
-                <div>
-                    <label for="category">Categoria:</label>
-                    <select name="category" id="category">
+                <% if ( loggedUser != undefined && loggedUser.role_id == 1 ) { %>
+                    <label for="role_id">Categoria:</label>
+                    <select name="role_id" id="role_id">
                         <option value="NaN" selected disabled>--Selecciona--</option>
-                        <option value="0">admin</option>
-                        <option value="1">user</option>
+                        <option value="1">admin</option>
+                        <option value="2">invitado</option>
                     </select>
+                <% } %>  
+                <div>
                 </div>
                 <div>
                     <label for="image">Avatar:</label>
