--- a/site/src/views/main/index.ejs
+++ b/site/src/views/main/index.ejs
@@ -7,9 +7,9 @@
     <div class="container">
         <aside class="aside">
             <ul>
-                <li><a href="#">Promociones</a></li>
-                <li><a href="/products">Componentes</a></li>
-                <li><a href="#">Gaming</a></li>
+                <li><a href="/products">Products</a></li>
+                <li><a href="/products/create">CrearProduct</a></li>
+                <li><a href="/users">Lista de usuraios</a></li>
                 <li><a href="#">Oficina</a></li>
                 <li><a href="#">Network</a></li>
                 <li><a href="#">Apple</a></li>
