--- a/site/backend/src/views/errors/error.ejs
+++ b/site/backend/src/views/errors/error.ejs
@@ -6,7 +6,13 @@
 
     <div class="container">
         <main>
-            <h1>Pagina de error</h1>
+            <h1>404</h1>
+            <h2>Page not found!</h2>
+            <% if (message) { %>
+                <div class=errorMessage>
+                    <%= message %> 
+                </div>
+            <% } %> 
         </main>
 
     </div>
