--- a/site/backend/src/views/products/index.ejs
+++ b/site/backend/src/views/products/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head', {title: "Todos los productos"}) %>
+    <%- include('../partials/head', {title: "Productos"}) %>
 <body>
     <%- include('../partials/header') %>
 
@@ -18,7 +18,21 @@
                     </a>
                 </div> <!--.product-->
             <% } %> 
+
+            <div class="center">
+                <div class="pagination">
+                    <a href="#">&laquo;</a>
+                    <a href="#">1</a>
+                    <a href="#" class="active">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
+                    <a href="#">6</a>
+                    <a href="#">&raquo;</a>
+                </div>
+            </div>
         </main>
+
     </div>
 
     <%- include('../partials/footer') %>
