--- a/site/backend/gulp/scss/layout/products/_index.scss
+++ b/site/backend/gulp/scss/layout/products/_index.scss
@@ -54,3 +54,28 @@
         padding: 5px;
     }
 }
+.center {
+    text-align: center;
+}
+
+.pagination {
+    display: inline-block;
+
+    a {
+        color: black;
+        float: left;
+        padding: 8px 16px;
+        text-decoration: none;
+        transition: background-color .3s;
+        border: 1px solid #ddd;
+        margin: 0 4px;
+
+        &.active{
+            background-color: $secon;
+            color: white;
+            border: 1px solid $black; 
+        }
+
+        &:hover:not(.active) {background-color: #ddd;}
+    }
+}
