--- a/site/backend/gulp/scss/layout/main/_index.scss
+++ b/site/backend/gulp/scss/layout/main/_index.scss
@@ -1,26 +1,68 @@
-.multi__banner {
-    background-color:aliceblue;
-    border:.1rem solid #3dcf11;
-    display: flex;
-    justify-content: center;
+// .multi__banner {
+//     background-color:aliceblue;
+//     border:.1rem solid #3dcf11;
+//     display: flex;
+//     justify-content: center;
+// }
+
+// .img__individual {
+//     height:340px;
+//     width:299px;
+// }
+
+// .img__duo {
+//     height:400px;
+//     width:599px;
+// }
+
+// .banner {
+//     background-color:aliceblue;
+//     border:.1rem solid #3dcf11;
+//     display: table-cell;
+//     vertical-align: middle;
+// }
+// .banners{gap:.5rem;grid-template-columns:repeat(3,1fr);margin:1rem 0}
+// .banner,.banners{display:grid;grid-template-rows:1fr}
+// .banner__icon{grid-row:1/3;margin:auto 0;text-align:center}
+.product{
+    width: 90%;
+    background-color: white;
+    margin: 10px auto;
+    transition: box-shadow 0.3s;
+}
+.product:hover{
+    box-shadow: 0px 0px 10px rgb(100,100,100);
+}
+.productImage{
+    padding: 1.5rem 1rem;
+    width: 90%;
+    height: auto;
+    margin: auto;
+}
+.productInfo{
+    border-top: 1px solid #ebebeb;
+    height: auto;
+    padding: 15px;
+    position: relative;
 }
 
-.img__individual {
-    height:340px;
-    width:299px;
+@include phone{
+    .product{
+        box-shadow: 0px 0px 10px rgb(100,100,100);
+    }
+    .products{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .products article{
+        width: 45%;
+    }
 }
 
-.img__duo {
-    height:400px;
-    width:599px;
+@include tablet{
+    .products article{
+        width: 20%;
+    }
 }
-
-.banner {
-    background-color:aliceblue;
-    border:.1rem solid #3dcf11;
-    display: table-cell;
-    vertical-align: middle;
-}
-.banners{gap:.5rem;grid-template-columns:repeat(3,1fr);margin:1rem 0}
-.banner,.banners{display:grid;grid-template-rows:1fr}
-.banner__icon{grid-row:1/3;margin:auto 0;text-align:center}
