--- a/site/backend/src/views/main/index.ejs
+++ b/site/backend/src/views/main/index.ejs
@@ -6,79 +6,38 @@
 
     <div class="container">
         <main>
-            <div class="container multi__banner">
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>1ª CAMISETA CRUZ AZUL ROYAL M/C</h4>
-                </div>
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>CAMISETA MANGA CORTA CRUZ AZUL CELESTE</h4>
-                </div>
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>SUDADERA CON CAPUCHA CRUZ AZUL ROYAL</h4>
-                </div>    
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>MASCARILLA HIGIENICA CRUZ AZUL</h4>
-                </div>
+            <div class="stillBanner">
+                <img src="/images/stills/setup_still.jpg" alt="home banner">
             </div>
-    
-            <div class="container">
-                <div class="banners">
-                    <div class="banner">
-                        <div class="banner__icon"><img src="/images/still_default.jpg" alt="still"></div>
-                    </div> <!--.banner-->
-                    <div class="banner">
-                        <div class="banner__icon"><img src="/images/still_default.jpg" alt="still"></div>
-                    </div> <!--.banner-->
-                    <div class="banner">
-                        <div class="banner__icon"><img src="/images/still_default.jpg" alt="still"></div>
-                    </div> <!--.banner-->
+            <div class="productSection">
+                <div class="sectionTitle">
+                    <h2>Productos mas vendidos!</h2>
                 </div>
-            </div>
-    
-            <div class="container multi__banner">
-                <div>
-                    <img class="img__duo" src="/images/still_default.jpg" alt="still">
-                </div>
-                <div>
-                    <img class="img__duo" src="/images/still_default.jpg" alt="still">
-                </div>
-            </div>
-    
-            <div class="container">
-                <div class="banners">
-                    <div class="banner">
-                        <div class="banner__icon"><img src="/images/prod_default.jpg" alt="product"></div>
-                    </div> <!--.banner-->
-                    <div class="banner">
-                        <div class="banner__icon"><img src="/images/prod_default.jpg" alt="product"></div>
-                    </div> <!--.banner-->
-                    <div class="banner">
-                        <div class="banner__icon"><img src="/images/prod_default.jpg" alt="product"></div>
-                    </div> <!--.banner-->
-                </div>
-            </div>
-    
-            <div class="container multi__banner">
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>JERSEY VISITANTE NECAXA 2020-2021</h4>           
-                </div>
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>Jersey Local Leon FC temporada 2020-2021</h4>
-                </div>
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>JERSEY DE GALA MAZATLAN FC 2020-2021</h4>
-                </div>
-                <div>
-                    <img class="img__individual" src="/images/prod_default.jpg" alt="product">
-                    <h4>JERSEY DE GALA ATLETICO SAN LUIS 2020-2021</h4>
-                </div>
+                <section class="products">
+
+                    <article class="product">
+                        <div class="productImage">
+                            <img src="/images/products/img-cafetera-moulinex.jpg" alt="prod image">
+                        </div>
+                        <div class="productInfo">
+                            <div class="truckButton">
+                                <div class="truckIcon">
+                                    <i class="fas fa-truck"></i>
+                                </div>
+                            </div>
+                            <div class="precio">
+                                <p>$6.770</p>
+                            </div>
+                            <div class="descuento">
+                                <p>40% OFF</p>
+                            </div>
+                            <div class="descripcion">
+                                <p>Cafetera Moulinex</p>
+                            </div>
+                        </div>
+                    </article>
+                    
+                </section>
             </div>
         </main>
     </div>
