--- a/site/backend/src/views/products/index.ejs
+++ b/site/backend/src/views/products/index.ejs
@@ -6,18 +6,36 @@
 
     <div class="container">
         <main>
-            <h1>Listado de todos los productos:</h1>
-            <% for (let product of products) { %> 
-                <div class="product">
-                    <a href="/products/<%= product.id %>">
-                        <img src="/images/min/products/<%= product.image %> " alt="imagen de <%= product.name %>" class="image">
-                        <div class="info">
-                            <p class="name"><%= product.name %></p>
-                            <p class="price">$<%= product.price %></p>
-                        </div>
-                    </a>
-                </div> <!--.product-->
-            <% } %> 
+            <div class="productSection">
+                <div class="sectionTitle">
+                    <h1>Listado de todos los productos:</h1>
+                </div>
+                <section class="products">
+                    <% for (let product of products) { %> 
+                        <article class="product">
+                            <div class="productImage">
+                                <a href="/products/<%= product.id %>"></a>
+                                    <img src="/images/min/products/<%= product.image %> " alt="imagen de <%= product.name %>">
+                                </a>
+                            </div>
+                            <div class="productInfo">
+                                <div class="truckButton">
+                                    <div class="truckIcon">
+                                        <i class="fas fa-truck"></i>
+                                    </div>
+                                </div>
+                                <div class="precio">
+                                    <p>$<%= product.price %></p>
+                                </div>
+                                <div class="descripcion">
+                                    <p><%= product.name %></p>
+                                </div>
+                            </div>
+                        </article><!--.product-->
+                    <% } %> 
+                    
+                </section>
+            </div>
 
             <div class="center">
                 <div class="pagination">
