--- a/site/backend/src/views/users/index.ejs
+++ b/site/backend/src/views/users/index.ejs
@@ -6,21 +6,57 @@
 
     <div class="container">
         <main>
-            <h1>Listados de Todos los usuarios</h1>
-            <p>Solo los admins tienen que tener acceso a esta parte de la pagina</p>
-            <% for (let user of users) { %> 
-                <div class="product">
-                    <a href="/users/<%= user.id %>">
-                        <img src="/images/min/users/<%= user.image %> " alt="avatar  de <%= user.first_name %>" class="image">
-                        <div class="info">
-                            <p class="name">Nombre completo: <%= `${user.first_name} ${user.last_name}` %></p>
-                            <p>Correo: <%= user.email %></p>
-                            <p>Rol: <%= user.role.title %></p>
-                        </div>
-                    </a>
-                    <a href="/users/<%= user.id %>/edit ">Edita el rol de usuario</a>
-                </div> <!--.user-->
-            <% } %> 
+            <div class="productSection">
+                <div class="sectionTitle">
+                    <h1>Listados de Todos los usuarios</h1>
+                    <p>Solo los admins tienen que tener acceso a esta parte de la pagina</p>
+                </div>
+                <section class="products">
+                    <% for (let user of users) { %>
+                        <article class="product">
+                            <div class="productImage">
+                                <a href="/users/<%= user.id %>"></a>
+                                    <img src="/images/users/<%= user.image %>" alt="avatar  de <%= user.first_name %>">
+                                </a>
+                            </div>
+                            <div class="productInfo">
+                                <div class="truckButton">
+                                    <div class="truckIcon">
+                                        <i class="fas fa-truck"></i>
+                                    </div>
+                                </div>
+                                <div class="precio">
+                                    <p><%= user.email %></p>
+                                </div>
+                                <div class="descuento">
+                                    <p><%= user.role.title %></p>
+                                </div>
+                                <div class="descripcion">
+                                    <p><%= `${user.first_name} ${user.last_name}`%></p>
+                                </div>
+                                <% if ( locals.logged_user && logged_user.role_id === 1) { %> 
+                                    <a href="/users/<%= user.id %>/edit ">Edita el rol de usuario</a>
+                                <% } %>
+                            </div>
+                        </article><!--.user-->
+                    <% } %> 
+                    
+                </section>
+            </div>
+
+            <div class="center">
+                <div class="pagination">
+                    <a href="#">&laquo;</a>
+                    <a href="#">1</a>
+                    <a href="#" class="active">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
+                    <a href="#">6</a>
+                    <a href="#">&raquo;</a>
+                </div>
+            </div>
+
         </main>
     </div>
 
