--- a/site/backend/src/views/products/index.ejs
+++ b/site/backend/src/views/products/index.ejs
@@ -14,8 +14,8 @@
                     <% for (let product of products) { %> 
                         <article class="product">
                             <div class="productImage">
-                                <a href="/products/<%= product.id %>"></a>
-                                    <img src="/images/min/products/<%= product.image %> " alt="imagen de <%= product.name %>">
+                                <a href="/products/<%= product.id %>">
+                                    <img src="/images/min/products/default.jpg " alt="imagen de <%= product.name %>">
                                 </a>
                             </div>
                             <div class="productInfo">
