--- a/site/backend/gulp/scss/layout/partials/_header.scss
+++ b/site/backend/gulp/scss/layout/partials/_header.scss
@@ -87,6 +87,11 @@
             overflow: hidden;
         }
     }
+    &.fijo{
+        position: fixed;
+        width: 100%;
+        box-shadow: 0 .3rem .4rem;
+    }
 }
 
 .logo{
