--- a/site/backend/gulp/scss/layout/partials/_header.scss
+++ b/site/backend/gulp/scss/layout/partials/_header.scss
@@ -89,8 +89,10 @@
     }
     &.fijo{
         position: fixed;
+        top: 0;
         width: 100%;
         box-shadow: 0 .3rem .4rem;
+        z-index: 3;
     }
 }
 
