--- a/site/backend/gulp/scss/layout/main/_index.scss
+++ b/site/backend/gulp/scss/layout/main/_index.scss
@@ -1,34 +1,14 @@
-// .multi__banner {
-//     background-color:aliceblue;
-//     border:.1rem solid #3dcf11;
-//     display: flex;
-//     justify-content: center;
-// }
-
-// .img__individual {
-//     height:340px;
-//     width:299px;
-// }
-
-// .img__duo {
-//     height:400px;
-//     width:599px;
-// }
-
-// .banner {
-//     background-color:aliceblue;
-//     border:.1rem solid #3dcf11;
-//     display: table-cell;
-//     vertical-align: middle;
-// }
-// .banners{gap:.5rem;grid-template-columns:repeat(3,1fr);margin:1rem 0}
-// .banner,.banners{display:grid;grid-template-rows:1fr}
-// .banner__icon{grid-row:1/3;margin:auto 0;text-align:center}
 .product{
     width: 90%;
-    background-color: white;
+    background-color: $prin;
     margin: 10px auto;
     transition: box-shadow 0.3s;
+
+    align-content: center;
+    place-items: center;
+    justify-items: center;
+    align-items: center;
+    margin: 20px;
 }
 .product:hover{
     box-shadow: 0px 0px 10px rgb(100,100,100);
@@ -44,6 +24,7 @@
     height: auto;
     padding: 15px;
     position: relative;
+    z-index: 1;
 }
 
 @include phone{
