--- a/site/backend/src/views/products/index.ejs
+++ b/site/backend/src/views/products/index.ejs
@@ -15,7 +15,7 @@
                         <article class="product">
                             <div class="productImage">
                                 <a href="/products/<%= product.id %>">
-                                    <img src="/images/min/products/default.jpg " alt="imagen de <%= product.name %>">
+                                    <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
                                 </a>
                             </div>
                             <div class="productInfo">
